# Simple-SFML-Game

./: CMakeLists.txt  MenuHandler.cpp  MenuHandler.hpp  gameField.cpp  gameField.hpp  gameLogic.cpp  gameLogic.hpp  gameRes.cpp  gameRes.hpp  gameSets.cpp  gameSets.hpp  gameTemplates.cpp  gameTemplates.hpp  gameView.cpp  gameView.hpp  main.cpp
